--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 
         <form method="post" class=form id=login-form>
             <input type=text name=username placeholder="username"><br>
-            <input type=text name=password placeholder="password"><br>
+            <input type=password name=password placeholder="password"><br>
             <input type=submit value=Login>
         </form>
 
