Change signup form password to type password

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,7 +16,7 @@
 
         <form method="post" class=form id=signup-form>
             <input type=text name=username placeholder="username"><br>
-            <input type=text name=password placeholder="password"><br>
+            <input type=password name=password placeholder="password"><br>
             <input type=submit value="Sign up">
         </form>
 
