--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,27 +1,16 @@
+{% extends "base.html" %}
+{% block title %}Login{% endblock %}
+{% block head %}
+    {{ super() }}
+{% endblock %}
 
-<!DOCTYPE html>
-<html lang="en">
- 
-<head>
-    <title>Login</title>
- 
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-</head>
- 
-<body>
- 
-    <div class="container">
-        <p>Usernames are unique on the lowercase variants</p>
-        <p>Your password will not be stored in plaintext. If you lose it you lose access to your account</p>
+{% block container %}
+    <p>Usernames are unique on the lowercase variants</p>
+    <p>Your password will not be stored in plaintext. If you lose it you lose access to your account</p>
 
-        <form method="post" class=form id=signup-form>
-            <input type=text name=username placeholder="username"><br>
-            <input type=password name=password placeholder="password"><br>
-            <input type=submit value="Sign up">
-        </form>
-
-    </div>
-
-</body>
- 
-</html>
+    <form method="post" class=form id=signup-form>
+        <input type=text name=username placeholder="username"><br>
+        <input type=password name=password placeholder="password"><br>
+        <input type=submit value="Sign up">
+    </form>
+{% endblock %}
