--- a/templates/base.html
+++ b/templates/base.html
@@ -24,5 +24,9 @@
     <div class=container>
         {% block container %}{% endblock %}
     </div>
+
+    <footer>
+        <a href="https://github.com/Patstrom/resistance"><img src="https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" border="0" width="50" heigth="50" /></>
+    </footer>
 </body>
 </html>
