--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,8 @@
 /* Common styling between all pages */
 body {
     margin: 0 auto;
-    max-width: 50em;
     font-family: "Helvetica", "Arial", sans-serif;
     line-height: 1.5;
-    padding: 2em 1em;
     color: #444;
 }
 
@@ -26,6 +24,7 @@ ul {
 }
 
 .container {
+    margin: auto;
     width: 50em;
 }
 
@@ -51,4 +50,15 @@ ul {
 
 #navbar a:hover {
     text-decoration: underline;
+}
+
+footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+footer img {
+    margin: auto;
+    display: block;
 }
