--- a/static/game.css
+++ b/static/game.css
@@ -38,6 +38,27 @@
     content: " | ";
 }
 
+#start-game {
+    margin-top: 2em;
+}
+
+#join-game {
+    margin-top: 2em;
+}
+
+#mission-link a {
+    text-decoration: none;
+    border-bottom: 1px black dotted;
+}
+
+#mission-link a:visited {
+    text-decoration: none;
+}
+
+#navbar a:hover {
+    text-decoration: underline;
+}
+
 /* The game.html chat section */
 #chat {
     width: inherit;
