Properly align info in signup/login forms

--- a/static/credentials.css
+++ b/static/credentials.css
@@ -21,3 +21,13 @@
 .credentials-form input[type=submit] {
     display: block;
 }
+
+#signup-info {
+    padding-left: 15em;
+    padding-right: 15em;
+}
+
+#failed-login {
+    padding-left: 15em;
+    padding-right: 15em;
+}
